--- a/wpematico-fr_FR.po
+++ b/wpematico-fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: WPeMatico 2.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-23 17:59-0300\n"
-"PO-Revision-Date: 2020-07-28 01:44+0100\n"
+"PO-Revision-Date: 2020-07-30 19:05+0100\n"
 "Language-Team: NetMdP <esteban@netmdp.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1657,63 +1657,77 @@ msgstr ""
 
 #: wpematico/app/campaign_help.php:41
 msgid "This option make the title permalink to original URL."
-msgstr ""
+msgstr "Cette option crée un lien permanent entre le titre et l'URL d'origine."
 
 #: wpematico/app/campaign_help.php:42
 msgid ""
 "This feature will be ignored if you deactivate Campaign Custom Fields on "
 "settings."
 msgstr ""
+"Cette fonctionnalité sera ignorée si vous désactivez les champs "
+"personnalisés de la campagne dans les paramètres."
 
 #: wpematico/app/campaign_help.php:46
 msgid "This option allows to use the exact permalink of the source"
-msgstr ""
+msgstr "Cette option permet d'utiliser le lien permanent exact de la source"
 
 #: wpematico/app/campaign_help.php:49
 msgid "Avoid Search redirection to source permalink."
 msgstr ""
+"Éviter la redirection de la recherche vers le lien permanent de la source."
 
 #: wpematico/app/campaign_help.php:50
 msgid ""
 "This feature allow follow or not redirections of URLs on permalinks to try "
 "to get the original source permalink."
 msgstr ""
+"Cette fonctionnalité permet de suivre ou non la redirection des URL sur les "
+"liens permanents pour essayer de récupérer le lien permanent de la source "
+"d'origine."
 
 #: wpematico/app/campaign_help.php:51
 msgid ""
 "You can UNSELECT this if uses source permalinks and the obtained URLs are "
 "not the the originals."
 msgstr ""
+"Vous pouvez désélectionner ceci si utilise des liens permanents de la "
+"sources et que les URL obtenues ne sont pas les originaux."
 
 #: wpematico/app/campaign_help.php:52
 msgid "CHECK this option to improve fetching speed and performance."
 msgstr ""
+"Cocher cette option pour améliorer la vitesse de récupération et les "
+"performances."
 
 #: wpematico/app/campaign_help.php:56
 msgid "Allows pinbacks and trackbacks in the posts created by this campaign."
 msgstr ""
+"Autoriser les pings et les rétroliens dans les publications créées par cette "
+"campagne."
 
 #: wpematico/app/campaign_help.php:60
 msgid ""
 "This feature convert character encoding of content and title to UTF-8 if "
 "they have different character encoding."
 msgstr ""
+"Cette fonctionnalité convertit l'encodage de caractères du contenu et du "
+"titre en UTF-8 s'ils ont un codage de caractères différent."
 
 #: wpematico/app/campaign_help.php:63
 msgid "Discussion options."
-msgstr ""
+msgstr "Options de discussion."
 
 #: wpematico/app/campaign_help.php:64
 msgid "Comments options to these posts."
-msgstr ""
+msgstr "Les options des commentaires des ces publications."
 
 #: wpematico/app/campaign_help.php:67
 msgid "Author."
-msgstr ""
+msgstr "Auteur."
 
 #: wpematico/app/campaign_help.php:68
 msgid "The posts created by this campaign will be assigned to this author."
-msgstr ""
+msgstr "Les articles créés par cette campagne seront attribués à cet auteur."
 
 #: wpematico/app/campaign_help.php:72
 msgid ""
@@ -1721,29 +1735,36 @@ msgid ""
 "contents, but check this option if you want to fill in the excerpt field "
 "with the description tag of the item. "
 msgstr ""
+"Les paramètres par défaut de WordPress font des extraits \"à la volée\" à "
+"partir du contenu de l'article, mais cochez cette option si vous souhaitez "
+"remplir le champ extrait avec la balise de description de l'élément."
 
 #: wpematico/app/campaign_help.php:73
 msgid ""
 "You could get the same value of the content because if the description field "
 "does not exists the content field will be used. "
 msgstr ""
+"Vous pouvez obtenir la même valeur du contenu car si le champ de la "
+"description n'existe pas, le champ de contenu sera utilisé."
 
 #: wpematico/app/campaign_help.php:76
 msgid "Strip All HTML Tags."
-msgstr ""
+msgstr "Purger toutes les balises HTML."
 
 #: wpematico/app/campaign_help.php:77
 msgid "Remove all HTML from original content"
-msgstr ""
+msgstr "Supprimer tous les balises HTML du contenu original"
 
 #: wpematico/app/campaign_help.php:78
 msgid "NOTE that also strip images &lt;img&gt; and links &lt;a&gt;."
 msgstr ""
+"Notez que ça supprime aussi les images &lt;img&gt; et les liens &lt;a&gt;."
 
 #: wpematico/app/campaign_help.php:82
 msgid ""
 "This option take out clickable links from content, leaving just the text."
 msgstr ""
+"Cette option supprime les liens cliquables du contenu, laissant que le texte."
 
 #: wpematico/app/campaign_help.php:86
 msgid "Skip the Wordpress post content filters."
@@ -1751,7 +1772,7 @@ msgstr "Ignorer les filtres de contenu de publication WordPress."
 
 #: wpematico/app/campaign_help.php:87
 msgid "Saves the content exactly as the plugin has it."
-msgstr ""
+msgstr "Enregistre le contenu exactement comme le plugin l'a."
 
 #: wpematico/app/campaign_help.php:88
 msgid "Not recommended."
@@ -1767,39 +1788,48 @@ msgstr "Le Flux des chaînes de YouTube et des vidéos de l'utilisateur."
 
 #: wpematico/app/campaign_help.php:95
 msgid "Fill in the feed URL field in the standard way."
-msgstr ""
+msgstr "Remplir le champ URL du flux de la manière standard."
 
 #: wpematico/app/campaign_help.php:96
 msgid ""
 "For Youtube Channel as: https://www.youtube.com/feeds/videos.xml?channel_id="
 "%channelid%"
 msgstr ""
+"Pour la chaîne YouTube comme: https://www.youtube.com/feeds/videos.xml?"
+"channel_id=%channelid%"
 
 #: wpematico/app/campaign_help.php:97
 msgid ""
 "For Youtube User as: https://www.youtube.com/feeds/videos.xml?user=%username%"
 msgstr ""
+"Pour l'utilisateur YouTube comme: https://www.youtube.com/feeds/videos.xml?"
+"user=%username%"
 
 #: wpematico/app/campaign_help.php:98
 msgid ""
 "For Youtube Playlist as: https://www.youtube.com/feeds/videos.xml?"
 "playlist_id=%playlist_id%"
 msgstr ""
+"Pour la liste de lecture vidéo YouTube comme: https://www.youtube.com/feeds/"
+"videos.xml?playlist_id=%playlist_id%"
 
 #: wpematico/app/campaign_help.php:99
 msgid ""
 "The campaign fetches the title, the image, the embebed video and the "
 "description."
 msgstr ""
+"La campagne récupère le titre, l'image, la vidéo embarquée et la description."
 
 #: wpematico/app/campaign_help.php:102
 msgid "Use [embed]"
-msgstr ""
+msgstr "Utiliser[embed]"
 
 #: wpematico/app/campaign_help.php:103
 msgid ""
 "Use [embed] WordPress shortcode instead Youtube shared iframe html code."
 msgstr ""
+"Utiliser le code court [embed] WordPress à la place du code html du cadre "
+"partagé par YouTube."
 
 #: wpematico/app/campaign_help.php:104
 msgid ""
@@ -1807,6 +1837,10 @@ msgid ""
 "to set of a maximum (but not fixed) width and height. This was added as of "
 "WordPress 2.9 and is used like this: "
 msgstr ""
+"La fonction Incorporée vous permet d'encapsuler des éléments embarqués à "
+"l'aide d'un simple code court pour définir une largeur et une hauteur "
+"maximales (mais non fixes). Cela a été ajouté à partir de WordPress 2.9 et "
+"est utilisé comme ceci:"
 
 #: wpematico/app/campaign_help.php:108
 msgid "Video sizes"
@@ -1818,11 +1852,11 @@ msgstr "Largeur et hauteur du cadre vidéo dans l'article."
 
 #: wpematico/app/campaign_help.php:110
 msgid "Recommended left 0 (zero) for responsive."
-msgstr ""
+msgstr "Recommandé à gauche 0 (zéro) pour le design responsive"
 
 #: wpematico/app/campaign_help.php:115
 msgid "How works the bbPress Campaign Type"
-msgstr ""
+msgstr "Comment fonctionne la campagne de type bbPress"
 
 #: wpematico/app/campaign_help.php:116
 msgid ""
@@ -1830,6 +1864,9 @@ msgid ""
 "bbPress Forum to publish new Topics inside it, according to the items in the "
 "feed."
 msgstr ""
+"Vous pouvez désélectionner le forum pour créer de nouveaux forums ou "
+"sélectionner un forum bbPress déjà créé pour publier de nouveaux sujets à "
+"l'intérieur, en fonction des éléments du Flux."
 
 #: wpematico/app/campaign_help.php:117
 msgid ""
